syntax = "proto3";

package shardorchestrator;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/workflows/shardorchestrator/pb";

message Observation {
  map<uint32, bool> status = 1; // shard_id -> is_healthy
  repeated string hashes = 2;
  google.protobuf.Timestamp now = 3;
}

message WorkflowRoute {
  uint32 shard = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message Transition {
  uint32 want_shards = 1;
  uint32 last_stable_count = 2;
  google.protobuf.Timestamp changes_safe_after = 3;
}

message RoutingState {
  uint64 id = 1;
  oneof state {
    Transition transition = 2;
    uint32 routable_shards = 3;
  }
}

message Outcome {
  RoutingState state = 1;
  map<string, WorkflowRoute> routes = 2;
}

